@@ -3,6 +3,9 @@
   1. Fix bug when GCS connector lists all files in directory instead of
      specified limit.
 
+  2. Eagerly initialize `GoogleCloudStorageReadChannel` metadata if
+     `fs.gs.inputstream.fast.fail.on.not.found.enable` set to true.
+
 
 1.9.15 - 2019-02-21
 
